--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "github_token": "mytoken",
   "repos": [
     {
-      "owner": "grafana",
-      "repo": "grafana",
-      "issues": true,
-      "comments": true
+      "repo": "grafana/grafana-docker"
+    },
+    {
+      "repo": "grafana/piechart-panel"
     }
   ]
 }
